force-app/main/default/objects/MatrixLineItem__c/MatrixLineItem__c.object-meta.xml
<CustomObject>
    <label>Matrix Line Item</label>
    <nameField>
        <displayFormat>MLI-{00000}</displayFormat>
        <label>Matrix Line Item name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrix Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>