force-app/main/default/objects/MatrixLineItem__c/fields/MatrixId__c.field-meta.xml
<CustomField>
    <fullName>MatrixId__c</fullName>
    <label>Matrix</label>
    <referenceTo>Matrix__c</referenceTo>
    <relationshipLabel>Matrix Line Items</relationshipLabel>
    <relationshipName>Matrix_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>