force-app/main/default/objects/MatrixLineItem__c/fields/PharmaProductId__c.field-meta.xml
<CustomField>
    <fullName>PharmaProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CT Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CTCPG__Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CTCPG__Product__c</referenceTo>
    <relationshipLabel>Matrix Line Items</relationshipLabel>
    <relationshipName>Matrix_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>