force-app/main/default/objects/MatrixLineItem__c/fields/PriceAudit__c.field-meta.xml
<CustomField>
    <fullName>PriceAudit__c</fullName>
    <formula>PharmaProductId__r.CTCPG__PriceAudit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Price Audit</label>
    <type>Checkbox</type>
</CustomField>