force-app/main/default/objects/MatrixLineItem__c/fields/Rayon__c.field-meta.xml
<CustomField>
    <fullName>Rayon__c</fullName>
    <formula>Text( PharmaProductId__r.Rayon__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rayon</label>
    <type>Text</type>
</CustomField>