force-app/main/default/objects/MatrixLineItem__c/recordTypes/Matrix_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Matrix_Line_Item</fullName>
    <active>true</active>
    <label>Matrix Line Item</label>
</RecordType>