force-app/main/default/objects/MatrixLineItem__c/recordTypes/Mobile_Matrix_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Matrix_Line_Item</fullName>
    <active>false</active>
    <label>Mobile Matrix Line Item</label>
</RecordType>